--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "deploy": "vercel"
-
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "@types/socket.io-client": "^3.0.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "jwt-decode": "^3.1.2",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
